--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,8 @@ mypy = "*"
 django-stubs = "*"
 ruff = "^0.1.7"
 black = "*"
+types-setuptools = "^69.0.0.0"
+types-boto3 = "^1.0.2"
 
 [tool.mypy]
 python_version = 3.6
@@ -62,6 +64,14 @@ warn_unreachable = true
 plugins = [
     "mypy_django_plugin.main"
 ]
+
+[[tool.mypy.overrides]]
+module = [
+    "storages.*",
+    "google.*",
+    "pytest.*",
+]
+ignore_missing_imports = true
 
 [tool.django-stubs]
 django_settings_module = "collectfast.tests.settings"
